fix tabs wrapping

--- a/app/styles/modules/_tabs.scss
+++ b/app/styles/modules/_tabs.scss
@@ -20,7 +20,7 @@
 
     display: flex;
 
-    #{$this}__content { flex: 1 0 auto; }
+    #{$this}__content { flex: 1 1 auto; }
   }
 
   &--block {
@@ -28,7 +28,7 @@
 
     #{$this}__item {
       float: none;
-      flex: 1 0 auto;
+      flex: 1 1 auto;
 
       margin-right: _get-space('h', 'small');
 
